--- a/src/components/sections/Rooms.module.scss
+++ b/src/components/sections/Rooms.module.scss
@@ -7,12 +7,13 @@
     gap: 30px;
     align-items: stretch;
     justify-content: center;
+    min-height: max-content;
 
     @media screen and (min-width: $medium-screen-breakpoint) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 
-    @media screen and (min-width: 1024px) {
+    @media screen and (min-width: $large-screen-breakpoint) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 
@@ -35,7 +36,7 @@
         object-fit: cover;
         object-position: 50% 50%;
         transform: scale(1);
-        transition: transform .25s ease;
+        transition: transform 0.25s ease;
         display: block;
       }
     }
